# rail_defect_sim

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.py  demo_outline.md  pyproject.toml  run_video_gen.py
.claude/commands/: add-defect.md  bump-cache.md
app/: __init__.py  progress.py
app/camera/: __init__.py  camera_animator.py
app/config/: __init__.py  geometry.py  profiles.py  settings.py
app/core/: __init__.py  pipeline.py
app/geometry/: __init__.py  layout.py  track_builder.py  track_defects.py  track_section.py  track_section_cache.py  utils.py
app/materials/: __init__.py  base.py  clip.py  factory.py  fastener.py  grass.py  material_factory.py  rail.py  (+1 more)
docs/: README.md  index.html
runtime/: camera_demos.sh  cameroon_birds_eye.sh  cameroon_drone_three_quarter.sh  cameroon_low_inspection.sh  cameroon_roof_far.sh  cameroon_windshield.sh  draft_preview.sh  draft_quick.sh  final_4k.sh  final_fullhd.sh  smoke_displacement.sh  smoke_test.sh
runtime_windows/: draft_preview.ps1  draft_quick.ps1  final_4k.ps1  final_fullhd.ps1
tests/: conftest.py  test_cache_base.py  test_cache_fingerprint.py  test_cache_manifest.py  test_cache_orchestration.py  test_cache_source_paths.py  test_config_settings.py  test_defect_missing_fastener.py  test_defect_registry.py  test_defect_right_rail_displacement.py  test_defect_selector.py  test_defect_skewed_sleeper.py  test_defect_variant.py  test_geometry_config.py  test_geometry_layout.py  test_geometry_track_section.py  test_geometry_utils.py  test_materials.py  test_progress_iter.py  test_progress_silencer.py
(+68 files in other folders)
